--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jsdars1</title>
+    <link rel="stylesheet" href="./css/mian.css">
     
 </head>
 <body>
-  <ul class="list">
-    <li><iframe width="560" height="315" src="https://www.youtube.com/embed/wMUHrKlYcj4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-  </ul>
-    
+  <div class="animation-example">
+    <div class="container">
+        <p class="animation">You chose a cold night to visit our planet.</p>
+    </div>
+    <button class="activate" type="button">Activate animation</button>
+    <div class="event-log"></div>
+</div>
   <script src="js/fc.js"></script>  
 </body>
 </html>
